fixed overflow issue on sunnyside agency landing page

--- a/Front End Mentor/sunnyside-agency-landing-page-main/style.css
+++ b/Front End Mentor/sunnyside-agency-landing-page-main/style.css
@@ -30,7 +30,8 @@ img{
 }
 main,
 footer{
-    max-width: 1600px;
+    max-width: 1800px;
+    margin: 0 auto;
 }
 
 /*     Main     */
@@ -258,6 +259,9 @@ footer{
 .gallery-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+}
+.gallery-container img{
+    width: 100%;
 }
 
 
